[gd_scene load_steps=5 format=3 uid="uid://ci1l2bi1bnip8"]

[ext_resource type="Script" uid="uid://w1bp8erf3jro" path="res://Scripts/main.gd" id="1_kln2b"]
[ext_resource type="PackedScene" uid="uid://b1fmfftet4j76" path="res://Scenes/questionscene.tscn" id="2_rgh2o"]
[ext_resource type="Texture2D" uid="uid://cg747nqovt6ao" path="res://Textures/chatbox.png" id="3_pbw6q"]

[sub_resource type="Theme" id="Theme_uu6xs"]
Label/colors/font_color = Color(1, 1, 0, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 6
PanelContainer/styles/panel = null

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_uu6xs")
script = ExtResource("1_kln2b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" parent="." instance=ExtResource("2_rgh2o")]
visible = false
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Button" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_pbw6q")
texture_pressed = ExtResource("3_pbw6q")
texture_hover = ExtResource("3_pbw6q")
texture_disabled = ExtResource("3_pbw6q")
texture_focused = ExtResource("3_pbw6q")

[node name="Label" type="Label" parent="VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Load And Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_pbw6q")
texture_pressed = ExtResource("3_pbw6q")
texture_hover = ExtResource("3_pbw6q")
texture_disabled = ExtResource("3_pbw6q")
texture_focused = ExtResource("3_pbw6q")

[node name="Label" type="Label" parent="VBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Make New"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_pbw6q")
texture_pressed = ExtResource("3_pbw6q")
texture_hover = ExtResource("3_pbw6q")
texture_disabled = ExtResource("3_pbw6q")
texture_focused = ExtResource("3_pbw6q")

[node name="Label" type="Label" parent="VBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Load And Edit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button4" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_pbw6q")
texture_pressed = ExtResource("3_pbw6q")
texture_hover = ExtResource("3_pbw6q")
texture_disabled = ExtResource("3_pbw6q")
texture_focused = ExtResource("3_pbw6q")

[node name="Label" type="Label" parent="VBoxContainer/Button4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_loadandplay_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_makenew_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_loadandedit_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_exit_pressed"]
